--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "lint:fix": "eslint --fix",
     "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+    "lint-prettier": "npm run lint && npm run prettier ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
