--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "lint-prettier"
+    ]
+  },
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -21,6 +26,7 @@
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
