--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.2.1",
     "nodemon": "^2.0.22",
-    "winston": "^3.9.0"
+    "winston": "^3.9.0",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
