--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
 
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    // "no-console":"error",
+    "no-console":"warn",
     // "no-undef":"error",
     // "no-unused-expressions":"error",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"]
@@ -18,6 +18,10 @@
 
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
+  },
+  "globals": {
+    "process":"readonly"
   }
 }
