--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
 
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "no-console":"warn",
+    // "no-console":"warn",
     // "no-undef":"error",
     // "no-unused-expressions":"error",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"]
